--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
           echo "${EC2_SSH_KEY}" > ssh_key
           chmod 600 ssh_key
           ssh -o StrictHostKeyChecking=no -i ssh_key $EC2_USER@$EC2_HOST << 'EOF'
-            cd SmartBetter-website
+            cd hof/HOF-Website
             git pull origin master
             
             # Stop existing instance on port 5050 if running
