--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-torch
-Flask==2.1.1
-Flask-WTF==0.15.1
-plotly==5.3.1
-pandas==1.5.3
-requests
-firebase
-python_jwt==3.3.0
-gcloud
-scikit-learn
-matplotlib==3.4.3
-python-firebase
-mysql-connector-python 
-redis
-celery==5.2.3
-stripe>=6.0.0
-pymysql==1.4.46
-sshtunnel
-flaskcompress
+async-timeout==4.0.3
+attrs==24.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.8.30
+cfscrape==2.1.1
+charset-normalizer==3.3.2
+exceptiongroup==1.2.2
+greenlet==3.1.0
+h11==0.14.0
+idna==3.10
+jsonpickle==3.3.0
+numpy==1.26.4
+outcome==1.3.0.post0
+pandas==2.1.3
+PyMySQL==1.1.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+redis==5.0.8
+requests==2.32.3
+selenium==4.24.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==1.4.46
+trio==0.26.2
+trio-websocket==0.11.1
+typing-extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.3
+websocket-client==1.8.0
+wsproto==1.2.0
